# language-companion

./: .gitignore  README.md  pyproject.toml
src/agent_core/: agent.py
src/agent_core/prompts/: system.json
src/app/: app.py
src/data/: srs_db.json
src/utils/: constants.py  srs.py  storage.py
